--- a/package.json
+++ b/package.json
@@ -1,25 +1,32 @@
 {
-  "author": "Muhammad Ubaid Raza <mubaidr@gmail.com>",
-  "bugs": {
-    "url": "https://github.com/mubaidr/vue-electron-template/issues"
-  },
+  "author": "James Bailey",
   "dependencies": {
-    "bulma-pro": "^0.1.8",
-    "material-design-icons": "^3.0.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/vue-fontawesome": "^0.1.9",
+    "axios": "^0.19.0",
+    "bootstrap": "^4.4.1",
+    "bootstrap-vue": "^2.1.0",
+    "callback-loader": "^0.2.4",
+    "fsevents": "^2.1.2",
+    "jquery": "^1.9.1",
     "vue": "^2.6.11",
     "vue-electron": "^1.0.6",
+    "vue-icons": "^2.0.0",
     "vue-router": "^3.1.3",
-    "vuex": "^3.1.2"
+    "vue-the-mask": "^0.11.1",
+    "vuex": "^3.1.2",
+    "vuex-persistedstate": "^2.7.0"
   },
-  "description": "An electron-vue project",
+  "description": "Vue-Electron-Bootstrap-Template, based from mubaidr/vue-electron-template",
   "devDependencies": {
     "@babel/core": "^7.7.7",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-typescript": "^7.7.7",
-    "@typescript-eslint/eslint-plugin": "^2.13.0",
-    "@typescript-eslint/parser": "^2.13.0",
+    "@typescript-eslint/eslint-plugin": "^2.14.0",
+    "@typescript-eslint/parser": "^2.14.0",
     "acorn": "^7.1.0",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
@@ -33,11 +40,11 @@
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-vue": "^6.1.1",
+    "eslint-plugin-vue": "^6.1.2",
     "fast-glob": "^3.1.1",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.8.0",
+    "mini-css-extract-plugin": "^0.8.2",
     "node-loader": "^0.6.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
@@ -60,11 +67,7 @@
   "main": "./dist/main.js",
   "name": "vue-electron-template",
   "private": true,
-  "productName": "Vue Electron Template",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mubaidr/vue-electron-template.git"
-  },
+  "productName": "UFR",
   "scripts": {
     "build": "run-s rebuild:electron pack build-release",
     "build-release": "node _scripts/build.js",
