--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "bootstrap-vue": "^2.1.0",
     "callback-loader": "^0.2.4",
     "fsevents": "^2.1.2",
-    "jquery": "^1.9.1",
+    "jquery": "^1.12.4",
     "vue": "^2.6.11",
     "vue-electron": "^1.0.6",
     "vue-icons": "^2.0.0",
@@ -85,7 +85,7 @@
     "pack:main": "webpack --mode=production --env.NODE_ENV=production --hide-modules --config _scripts/webpack.main.config.js",
     "pack:renderer": "webpack --mode=production --env.NODE_ENV=production --hide-modules --config _scripts/webpack.renderer.config.js",
     "pack:workers": "webpack --mode=production --env.NODE_ENV=production --hide-modules --config _scripts/webpack.workers.config.js",
-    "postinstall": "electron-rebuild",
+    "postinstall": "electron-builder install-app-deps",
     "prettier": "prettier --write \"{src,_scripts}/**/*.{js,ts,vue}\"",
     "rebuild:electron": "run-s electron-builder-install electron-rebuild",
     "rebuild:node": "npm rebuild",
