--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,24 +1,36 @@
 {
+  "version": "0.2.0",
   "configurations": [
     {
-      "cwd": "${workspaceFolder}",
+      "type": "node",
+      "request": "launch",
       "name": "Electron: Main",
-      "port": 9222,
       "protocol": "inspector",
-      "request": "attach",
-      "sourceMaps": true,
-      "type": "node"
+      "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/electron",
+      "runtimeArgs": [
+        "--remote-debugging-port=9223",
+        "."
+      ],
+      "windows": {
+        "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/electron.cmd"
+      }
     },
     {
       "name": "Electron: Renderer",
-      "request": "attach",
-      "sourceMaps": true,
       "type": "chrome",
+      "request": "attach",
+      "port": 9223,
       "webRoot": "${workspaceFolder}",
-      "port": 9222,
-      "address": "[::1]",
-      "url": "http://localhost:3000",
+      "timeout": 30000
     }
   ],
-  "version": "0.2.0"
+  "compounds": [
+    {
+      "name": "Electron: All",
+      "configurations": [
+        "Electron: Main",
+        "Electron: Renderer"
+      ]
+    }
+  ]
 }
